@@ -1,3 +1,11 @@
+2001-04-12  Martin Baulig  <baulig@suse.de>
+
+	* libgnome.h (libgnome_module_info): Added external declaration.
+
+	* gnomelib-init.c: Renamed to libgnome-init.c.
+
+	* gnomelib-init.h: Removed.
+
 2001-04-11  Martin Baulig  <baulig@suse.de>
 
 	* gnome-util.h (gnome_libdir_file, gnome_datadir_file,
